--------------------------------------------------------------------------------
yjh 2025-06-07 02:01:38+03:00 - build 6487

1. SQLite: v3.50.1.

--------------------------------------------------------------------------------
drkns 2025-06-05 10:55:24+01:00 - build 6486

1. Apply 6394 to unmounted volumes too.

2. Refactoring.

--------------------------------------------------------------------------------
yjh 2025-05-30 23:26:25+03:00 - build 6485

1. SQLite: v3.50.0.

--------------------------------------------------------------------------------
drkns 2025-05-27 17:18:29+01:00 - build 6484

1. Continue gh-957.

--------------------------------------------------------------------------------
drkns 2025-05-26 22:19:53+01:00 - build 6483

1. Continue gh-957. Cleaning up the stables.

--------------------------------------------------------------------------------
drkns 2025-05-25 15:26:11+01:00 - build 6482

1. gh-957: Redundant empty lines after FCTL_SETUSERSCREEN.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-05-17 01:55:47+01:00 - build 6481

1. Refactoring.

--------------------------------------------------------------------------------
johnd0e 2025-05-09 23:37:26+02:00 - build 6480

1. gh-951: Fix editable combobox behavior in dialogs.

--------------------------------------------------------------------------------
skipik 2025-05-07 19:52:21+03:00 - build 6479

1. SQLite v3.49.2.

--------------------------------------------------------------------------------
drkns 2025-05-06 00:45:37+02:00 - build 6478

1. gh-945: Edit box histories should not be saved on cancelled DN_CLOSE.

--------------------------------------------------------------------------------
drkns 2025-05-05 17:05:48+01:00 - build 6477

1. Error handling improvements.

2. gh-920: Initialization issue with inaccessible paths.

--------------------------------------------------------------------------------