@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-06-07 23:53:11+01:00 - build 6488
+
+1. gh-968: EditorReloadModal dialog: the [ Cancel ] button does the same as the { New instance } button
+
+--------------------------------------------------------------------------------
 yjh 2025-06-07 02:01:38+03:00 - build 6487
 
 1. SQLite: v3.50.1.
